@@ -28,7 +28,6 @@ from background import Background
 # Different Pins for different priorities (one a subset of the next)
 # Option to have different passwords without the numbers (Remote with no numbers?)
 # Cleanup database of removed library items (when screensaver starts)
-# Add icons for classification restrictions
 
 
 # Class to handle core Pin Sentry behaviour
